# talisik-short-url

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT_READINESS.md  Makefile  PRODUCTION_TESTING_GUIDE.md  Procfile  README.md  cli_demo.py  env.downlodr  env.example  leapcell.yaml  package-lock.json  package.json  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  start.sh  test_api.py  test_base_url_fix.py  test_custom_domain.py  test_demo.py  test_npm_client.js  test_production.py  test_simple_xata.py  test_xata_integration.py  wsgi.py
.cursor/rules/: claude-4-sonnet-agent.mdc  eslint-integrations.mdc  implement.mdc  memory.mdc  plan.mdc  rules.mdc
.github/: pull_request_template.md
.github/workflows/: pr-checks.yml
api/: __init__.py  main.py
docs/: CUSTOM_DOMAIN_SETUP.md  INTEGRATION_GUIDE.md  LEAPCELL_DEPLOYMENT.md  NPM_PACKAGE_GUIDE.md  NPM_PACKAGE_SUMMARY.md  REACT_INTEGRATION.md  REACT_QUICKSTART.md  architecture.md  product_requirement_docs.md  technical.md  workflow-diagram.md
examples/: npm-package-demo.js  offline-npm-demo.js  react_demo.js
examples/react-test/: index.html  package-lock.json  package.json
examples/react-test/src/: App.css  App.tsx
talisik/: __init__.py
talisik/core/: __init__.py  config.py  models.py  shortener.py  storage.py
tests/: __init__.py
tests/unit/: test_shortener.py
